--- a/package.json
+++ b/package.json
@@ -10,8 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/leaflet": "^1.9.20",
+    "@types/react-router-dom": "^5.3.3",
+    "leaflet": "^1.9.4",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-leaflet": "^5.0.0",
+    "react-router-dom": "^7.9.1",
+    "recharts": "^3.2.1",
+    "typescript": "^5.9.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
