--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "leaflet": "^1.9.4",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-is": "^19.1.1",
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.9.1",
-    "recharts": "^3.2.1",
+    "recharts": "^2.15.4",
     "typescript": "^5.9.2"
   },
   "devDependencies": {
